# WrathClassicAPI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: release.yml
AddOns/!!!WrathClassicAPI/: !!!WrathClassicAPI.toc  GlobalStrings.lua
AddOns/!!!WrathClassicAPI/Util/: AddOnCompat.lua  CallbackRegistry.lua  Color.lua  ColorUtil.lua  Constants.lua  EventUtil.lua  FrameWatcher.lua  FunctionUtil.lua  GlobalCallbackRegistry.lua  ItemLocation.lua  ItemUtil.lua  LinkUtil.lua  MathUtil.lua  Mixin.lua  PlayerUtil.lua  Pools.lua  TableUtil.lua  TimedCallback.lua
AddOns/TableInspector/: TableInspector.lua  TableInspector.toc  TableInspector.xml
docs/: API.md  BlizzardScriptAPI_3.3.5.md  raw_wotlk_methods.txt
src/: Common.h  DllMain.cpp  Game.cpp  Game.h  Offsets.h
src/addons/: GetAddOnLocalTable.cpp
src/api/: Version.cpp
src/aura/: Api.cpp  Data.cpp  Data.h
src/event/: Custom.cpp  Custom.h  Util.cpp
src/expansion/: Info.cpp
src/gossip/: Info.cpp
src/item/: Arg.cpp  Arg.h  Data.cpp  Data.h  Exists.cpp  GetLocation.cpp  ID.cpp  ID.h  Info.cpp  IsBound.cpp  Location.cpp  Location.h  Spell.cpp  Spell.h
src/quest/: Cache.cpp  Cache.h  Data.cpp  Log.cpp  Title.cpp
src/spell/: IsPlayerSpell.cpp  SetSpellByID.cpp
src/talent/: Info.cpp
src/time/: DateAndTime.cpp  Server.cpp  Server.h
src/timer/: Timer.cpp
src/tooltip/: Has.cpp
src/ui/: Color.cpp  ColorData.h
src/unit/: ClassID.cpp
